--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
 
         .txt {
             margin-left: 20px;
+            margin-top: 30px;
         }
 
         .menubtn {
             margin-left: 40%;
+            margin-top: 30px;
             background-color: #8690C1;
             color: #141B3D;
             font-family: 'Courier New', Courier, monospace;
@@ -100,6 +102,7 @@
 
         p img {
             margin-left: 10%;
+            margin-top: 50px;
             height: 300px;
             width: 1200px;
             border-style: solid;
@@ -129,7 +132,7 @@
     <main>
         <section>
             <div class="headers">
-                <h1>  Raccon Cafe !! ------------------------------------------------</h1>
+                <h1>⋆˚✿˖° Raccon Cafe !! ⋆˚✿˖° ------------------------------------------------</h1>
                 <h2>Welcome to Raccoon Cafe - Where Cozy Meets Cute ── .✦</h2>
             </div>
         </section>
