--- a/pages/about.html
+++ b/pages/about.html
@@ -74,15 +74,89 @@
             margin-left: 20px;
         }
 
-        p img {
-            margin-left: 20px;
+        .rac1 {
+            margin-left: 90px;
+            margin-top: 50px;
             width: 350px;
             border-color:#8690C1;
-            border-width: 4px;
+            border-width: 8px;
             border-style: solid;
             height: 350px;
             border-radius: 50px;
+            transition: width 2s, height 2s;
+            cursor: pointer;
         }
+
+        .rac1:hover {
+            width: 370px;
+            height: 370px;
+        }
+
+        .rac2 {
+            margin-left: 90px;
+            margin-top: 50px;
+            width: 350px;
+            border-color:#8690C1;
+            border-width: 8px;
+            border-style: solid;
+            height: 350px;
+            border-radius: 50px;
+            transition: width 2s, height 2s;
+            cursor: pointer;
+        }
+
+        .rac2:hover {
+            width: 370px;
+            height: 370px;
+        }
+
+        .rac3 {
+            margin-left: 90px;
+            margin-top: 50px;
+            width: 350px;
+            border-color:#8690C1;
+            border-width: 8px;
+            border-style: solid;
+            height: 350px;
+            border-radius: 50px;
+            transition: width 2s, height 2s;
+            cursor: pointer;
+        }
+
+        .rac3:hover {
+            width: 370px;
+            height: 370px;
+        }
+
+        .moretxt {
+            margin-left: 22%;
+            font-size: 25px;
+        }
+
+        .mtrbtn {
+            margin-left: 40%;
+            background-color: #8690C1;
+            color: #141B3D;
+            font-family: 'Courier New', Courier, monospace;
+            font-weight: bold;
+            font-size: 30px;
+            border-color: #141B3D;
+            border-style: solid;
+            cursor: pointer;
+            border-radius: 30px;
+            border-width: 4px;
+            transition: opacity 0.5s;
+            padding: 50 100;
+        }
+
+        .mtrbtn:hover {
+            opacity: 0.75;
+        }
+
+        .mtrbtn:active {
+            opacity: 0.5;
+        }
+        
 
     </style>
 </head>
@@ -123,8 +197,14 @@
 
         <section>
             <p>
-            <img src="../images/Rac_Shocked.jpg" width="500px" alt="Raccoon">
+            <img class = "rac1" src="../images/Rac_Shocked.jpg" alt="Raccoon">
+            <img class = "rac2" src="../images/Rac_Sleeping.jpg" alt="Raccoon">
+            <img class = "rac3" src="../images/Rac_Table.jpg" alt="Raccoon">
             </p>
+            <div class="moretxt">
+            <p>Wanna meet more of our cute raccoons?? Click the button below !!!</p>
+            </div>
+            <button class="mtrbtn">⟡ Meet the racs ⟡</button>
         </section>
 
     </main>
