finished the menu page and made the pics in the about page smaller

--- a/pages/about.html
+++ b/pages/about.html
@@ -77,55 +77,55 @@
         .rac1 {
             margin-left: 90px;
             margin-top: 50px;
-            width: 350px;
+            width: 320px;
             border-color:#8690C1;
             border-width: 8px;
             border-style: solid;
-            height: 350px;
+            height: 320px;
             border-radius: 50px;
             transition: width 2s, height 2s;
             cursor: pointer;
         }
 
         .rac1:hover {
-            width: 370px;
-            height: 370px;
+            width: 340px;
+            height: 340px;
         }
 
         .rac2 {
-            margin-left: 90px;
+            margin-left: 170px;
             margin-top: 50px;
-            width: 350px;
+            width: 320px;
             border-color:#8690C1;
             border-width: 8px;
             border-style: solid;
-            height: 350px;
+            height: 320px;
             border-radius: 50px;
             transition: width 2s, height 2s;
             cursor: pointer;
         }
 
         .rac2:hover {
-            width: 370px;
-            height: 370px;
+            width: 340px;
+            height: 340px;
         }
 
         .rac3 {
-            margin-left: 90px;
+            margin-left: 170px;
             margin-top: 50px;
-            width: 350px;
+            width: 320px;
             border-color:#8690C1;
             border-width: 8px;
             border-style: solid;
-            height: 350px;
+            height: 320px;
             border-radius: 50px;
             transition: width 2s, height 2s;
             cursor: pointer;
         }
 
         .rac3:hover {
-            width: 370px;
-            height: 370px;
+            width: 340px;
+            height: 340px;
         }
 
         .moretxt {
@@ -146,7 +146,7 @@
             border-radius: 30px;
             border-width: 4px;
             transition: opacity 0.5s;
-            padding: 50 100;
+            padding: 70 140;
         }
 
         .mtrbtn:hover {
@@ -181,7 +181,7 @@
     <main>
         <section>
             <div class="headers">
-                <h1>⋆˚𝜗𝜚˚⋆ About us ⋆˚𝜗𝜚˚⋆ ---------------------------------------------</h1>
+                <h1>⋆˚𝜗𝜚˚⋆ About us ⋆˚𝜗𝜚˚⋆ --------------------------------------------------</h1>
                 <h2>Our Story ── .✦</h2>
             </div>
         </section>
@@ -204,7 +204,8 @@
             <div class="moretxt">
             <p>Wanna meet more of our cute raccoons?? Click the button below !!!</p>
             </div>
-            <button class="mtrbtn">⟡ Meet the racs ⟡</button>
+            <button class="mtrbtn" onclick="location.href='meet.html'">
+                ⟡ Meet the racs ⟡</button>
         </section>
 
     </main>
