--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background-color: #CCD0E6;
-            background-image: url("../images/Purplebg2.jpg");
+            background-image: url("images/Purplebg2.jpg");
             color: #141B3D;
             background-size: cover;
             font-family: 'Courier New', Courier, monospace;
@@ -151,7 +151,7 @@
             <p>
                 <img src="images/Rac_Banner.jpeg" width="500px" alt="Raccoon">
             </p>
-            <button class="menubtn">
+            <button class="menubtn" onclick="location.href='pages/menu.html'">
                 ⟡ MENU ⟡</button>
         </section>
     </main>
